# ai-agent-calculator

./: .gitignore  README.md  pyproject.toml
src/: agent.py  app.py  main.py  tools.py
tests/: test_agent.py  test_tools.py
